# neural-network

./: BP.hs  NN.hs  README.md  neural-network.cabal  testBP.hs  testNN.hs
